src/jdk.jpackage/windows/classes/jdk/jpackage/internal/regfile/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
/*
 * Copyright (c) 2022, Red Hat Inc. and/or its affiliates. All rights reserved.
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 *
 * This code is free software; you can redistribute it and/or modify it
 * under the terms of the GNU General Public License version 2 only, as
 * published by the Free Software Foundation.  Oracle designates this
 * particular file as subject to the "Classpath" exception as provided
 * by Oracle in the LICENSE file that accompanied this code.
 *
 * This code is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 * version 2 for more details (a copy is included in the LICENSE file that
 * accompanied this code).
 *
 * You should have received a copy of the GNU General Public License version
 * 2 along with this work; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 *
 * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
 * or visit www.oracle.com if you need additional information or have any
 * questions.
 */

package jdk.jpackage.internal.regfile.parser;

import java.util.ArrayList;

import jdk.jpackage.internal.regfile.RegFileKey;
import jdk.jpackage.internal.regfile.RegFileParseException;
import jdk.jpackage.internal.regfile.RegFileTokenException;
import jdk.jpackage.internal.regfile.RegFileValue;

public class Parser implements ParserConstants {

public ArrayList<RegFileKey> parse() throws RegFileParseException {
    try {
        return registryKeyList();
    } catch (TokenMgrError e) {
        throw RegFileParseException.fromTokenMgrError(e);
    } catch (ParseException e) {
        throw RegFileParseException.fromParseException(e);
    } catch (RegFileTokenException e) {
        throw RegFileParseException.fromTokenException(e);
    }
}

  final public ArrayList<RegFileKey> registryKeyList() throws ParseException {RegFileKey key;
    RegFileValue value;
    jj_consume_token(HEADER);
    jj_consume_token(EOL);
    jj_consume_token(EOL);
ArrayList<RegFileKey> keyList = new ArrayList<>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KEY:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      key = registryKey();
      jj_consume_token(EOL);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NAME:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        value = registryValue();
key.addValue(value);
      }
      jj_consume_token(EOL);
keyList.add(key);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EOL:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(EOL);
    }
    jj_consume_token(0);
{if ("" != null) return keyList;}
    throw new Error("Missing return statement in function");
}

  final public RegFileKey registryKey() throws ParseException {Token keyToken;
    keyToken = jj_consume_token(KEY);
{if ("" != null) return RegFileKey.fromToken(keyToken);}
    throw new Error("Missing return statement in function");
}

  final public RegFileValue registryValue() throws ParseException {Token nameToken;
    Token typeToken;
    Token valueToken;
    nameToken = jj_consume_token(NAME);
    typeToken = jj_consume_token(TYPE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VALUE_REG_SZ:{
      valueToken = jj_consume_token(VALUE_REG_SZ);
      break;
      }
    case VALUE_REG_BINARY:{
      valueToken = jj_consume_token(VALUE_REG_BINARY);
      break;
      }
    case EOL:{
      valueToken = jj_consume_token(EOL);
      break;
      }
    case VALUE_REG_DWORD:{
      valueToken = jj_consume_token(VALUE_REG_DWORD);
      break;
      }
    case VALUE_REG_QWORD:{
      valueToken = jj_consume_token(VALUE_REG_QWORD);
      break;
      }
    case VALUE_REG_MULTI_SZ:{
      valueToken = jj_consume_token(VALUE_REG_MULTI_SZ);
      break;
      }
    case VALUE_REG_EXPAND_SZ:{
      valueToken = jj_consume_token(VALUE_REG_EXPAND_SZ);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return RegFileValue.fromTokens(nameToken, typeToken, valueToken);}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
       jj_la1_init_0();
    }
    private static void jj_la1_init_0() {
       jj_la1_0 = new int[] {0x1000,0x2000,0x2,0x1f8002,};
    }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
      this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
     try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
     token_source = new ParserTokenManager(jj_input_stream);
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
      ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
     try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
     token_source.ReInit(jj_input_stream);
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
     jj_input_stream = new SimpleCharStream(stream, 1, 1);
     token_source = new ParserTokenManager(jj_input_stream);
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    if (jj_input_stream == null) {
       jj_input_stream = new SimpleCharStream(stream, 1, 1);
    } else {
       jj_input_stream.ReInit(stream, 1, 1);
    }
    if (token_source == null) {
 token_source = new ParserTokenManager(jj_input_stream);
    }

     token_source.ReInit(jj_input_stream);
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
     token_source = tm;
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
     token_source = tm;
     token = new Token();
     jj_ntk = -1;
     jj_gen = 0;
     for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
     Token oldToken;
     if ((oldToken = token).next != null) token = token.next;
     else token = token.next = token_source.getNextToken();
     jj_ntk = -1;
     if (token.kind == kind) {
       jj_gen++;
       return token;
     }
     token = oldToken;
     jj_kind = kind;
     throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
     if (token.next != null) token = token.next;
     else token = token.next = token_source.getNextToken();
     jj_ntk = -1;
     jj_gen++;
     return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
     Token t = token;
     for (int i = 0; i < index; i++) {
       if (t.next != null) t = t.next;
       else t = t.next = token_source.getNextToken();
     }
     return t;
  }

  private int jj_ntk_f() {
     if ((jj_nt=token.next) == null)
       return (jj_ntk = (token.next=token_source.getNextToken()).kind);
     else
       return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
     jj_expentries.clear();
     boolean[] la1tokens = new boolean[21];
     if (jj_kind >= 0) {
       la1tokens[jj_kind] = true;
       jj_kind = -1;
     }
     for (int i = 0; i < 4; i++) {
       if (jj_la1[i] == jj_gen) {
         for (int j = 0; j < 32; j++) {
           if ((jj_la1_0[i] & (1<<j)) != 0) {
             la1tokens[j] = true;
           }
         }
       }
     }
     for (int i = 0; i < 21; i++) {
       if (la1tokens[i]) {
         jj_expentry = new int[1];
         jj_expentry[0] = i;
         jj_expentries.add(jj_expentry);
       }
     }
     int[][] exptokseq = new int[jj_expentries.size()][];
     for (int i = 0; i < jj_expentries.size(); i++) {
       exptokseq[i] = jj_expentries.get(i);
     }
     return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
     return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
